4586.	[func]		dig, host and nslookup now use TCP for ANY queries.
			[RT #44687]

4585.	[port]		win32: Set CompileAS value. [RT #42474]

4584.	[bug]		A number of memory usage statistics were not properly
			reported when they exceeded 4G.  [RT #44750]

4574.	[bug]		Dig leaked memory with multiple +subnet options.
			[RT #44683]

	--- 9.11.1 released ---

	--- 9.11.1rc3 released ---

4582.	[security]	'rndc ""' could trigger a assertion failure in named.
			(CVE-2017-3138) [RT #44924]

4581.	[port]		Linux: Add getpid and getrandom to the list of system
			calls named uses for seccomp. [RT #44883]

4580.	[bug]		4578 introduced a regression when handling CNAME to
			referral below the current domain. [RT #44850]

	--- 9.11.1rc2 released ---

4578.	[security]	Some chaining (CNAME or DNAME) responses to upstream
			queries could trigger assertion failures.
			(CVE-2017-3137) [RT #44734]

4575.	[security]	DNS64 with "break-dnssec yes;" can result in an
			assertion failure. (CVE-2017-3136) [RT #44653]

	--- 9.11.1rc1 released ---

4571.	[bug]		Out-of-tree builds of backtrace_test failed.

4570.	[cleanup]	named did not correctly fall back to the built-in
			initializing keys if the bind.keys file was present
			but empty. [RT #44531]

4569.	[func]		Store both local and remote addresses in dnstap
			logging, and modify dnstap-read output format to
			print them. [RT #43595]

4568.	[contrib]	Added a --with-bind option to the dnsperf configure
			script to specify BIND prefix path.

4567.	[port]		Call getprotobyname and getservbyname prior to calling
			chroot so that shared libraries get loaded. [RT #44537]

4565.	[cleanup]	The inline macro versions of isc_buffer_put*()
			did not implement automatic buffer reallocation.
			[RT #44216]

4564.	[maint]		Update the built in managed keys to include the
			upcoming root KSK. [RT #44579]

4563.	[bug]		Modified zones would occasionally fail to reload.
			[RT #39424]
